; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_ab8500_btemp.c_ab8500_btemp_medhigh_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_ab8500_btemp.c_ab8500_btemp_medhigh_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ab8500_btemp = type { i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [48 x i8] c"Battery temperature is between medium and high\0A\00", align 1
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @ab8500_btemp_medhigh_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ab8500_btemp_medhigh_handler(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ab8500_btemp*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.ab8500_btemp*
  store %struct.ab8500_btemp* %7, %struct.ab8500_btemp** %5, align 8
  %8 = load %struct.ab8500_btemp*, %struct.ab8500_btemp** %5, align 8
  %9 = getelementptr inbounds %struct.ab8500_btemp, %struct.ab8500_btemp* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @dev_dbg(i32 %10, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.ab8500_btemp*, %struct.ab8500_btemp** %5, align 8
  %13 = getelementptr inbounds %struct.ab8500_btemp, %struct.ab8500_btemp* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i32 1, i32* %14, align 4
  %15 = load %struct.ab8500_btemp*, %struct.ab8500_btemp** %5, align 8
  %16 = getelementptr inbounds %struct.ab8500_btemp, %struct.ab8500_btemp* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 1
  store i32 0, i32* %17, align 4
  %18 = load %struct.ab8500_btemp*, %struct.ab8500_btemp** %5, align 8
  %19 = getelementptr inbounds %struct.ab8500_btemp, %struct.ab8500_btemp* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 2
  store i32 0, i32* %20, align 4
  %21 = load %struct.ab8500_btemp*, %struct.ab8500_btemp** %5, align 8
  %22 = getelementptr inbounds %struct.ab8500_btemp, %struct.ab8500_btemp* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 3
  store i32 0, i32* %23, align 4
  %24 = load %struct.ab8500_btemp*, %struct.ab8500_btemp** %5, align 8
  %25 = getelementptr inbounds %struct.ab8500_btemp, %struct.ab8500_btemp* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @power_supply_changed(i32 %26)
  %28 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %28
}

declare dso_local i32 @dev_dbg(i32, i8*) #1

declare dso_local i32 @power_supply_changed(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
